--- a/app/style.css
+++ b/app/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: linear-gradient(#1c2541, #3a506b);
+    background-image: linear-gradient(#5B5874, #863286);
     background-attachment: fixed;
 }
 
@@ -89,7 +89,7 @@ img:hover {
 }
 
 .message{
-    color: red;
+    color: #5EE87E;
     
 }
 
