--- a/evidence/style.css
+++ b/evidence/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: linear-gradient(#1c2541, #3a506b);
+    background-image: linear-gradient(#5B5874, #863286);
     background-attachment: fixed;
 }
 
