Added Quote of the Day

--- a/app/style.css
+++ b/app/style.css
@@ -96,3 +96,11 @@ img:hover {
 .form .resizable {
     resize: vertical;
 }
+
+button {
+    color: black;
+}
+
+.showlink {
+    text-decoration: underline;
+}
