Added instructions page, added styles for info text, and changed links to buttons

--- a/app/style.css
+++ b/app/style.css
@@ -104,3 +104,11 @@ button {
 .showlink {
     text-decoration: underline;
 }
+
+.appHeader{
+    font-size: 15pt;
+}
+
+.appInfo{
+    color: lightgray
+}
